--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "migrations:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -17,6 +18,8 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-orm": "^0.43.1",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -27,6 +30,7 @@
     "expo-router": "~5.0.5",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
@@ -48,9 +52,10 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
