--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
+    "@tanstack/react-query": "^5.75.4",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.43.1",
     "expo": "~53.0.7",
