--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/icons/favicon.png"
     },
     "plugins": [
