--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "^5.75.4",
+    "axios": "^1.9.0",
     "babel-plugin-inline-import": "^3.0.0",
     "drizzle-orm": "^0.43.1",
     "expo": "~53.0.7",
@@ -47,7 +48,9 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "server-only": "^0.0.1",
     "twrnc": "^4.6.1",
+    "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
